--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@fortawesome/fontawesome-free": "^6.0.0",
+    "chart.js": "^3.1.1",
     "firebase": "^9.16.0",
     "firebase-tools": "^12.5.4",
+    
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
