--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "chart.js": "^3.1.1",
     "firebase": "^9.16.0",
     "firebase-tools": "^12.5.4",
-    
+    "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
